--- a/README.html
+++ b/README.html
@@ -12,7 +12,7 @@ See the demo <a href="http://draco.afnizarnur.com/">here</a> and download the la
 
 <h2 id="license">License</h2>
 
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /></p>
+<p><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /></p>
 
 <p>Draco is licensed under Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>. Which means that you are free to copy and redistribute the material in any medium or format and remix, transform, and build upon the material.</p>
 
