change image name

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<p>Hi, I’m Balogun Muhammad Kassim</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/profile.jpg" alt="Avatar">
+					<img src="img/ava.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>I'm <span id="typed"></span></h1>
