--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Colin by @offsetkeyz</title>
+    <title>Colin's Resume</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Colin McAllister's Digital Resume">
@@ -46,15 +46,14 @@
 			<p>Hi, I’m Colin</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/ava.jpg" alt="Avatar">
+					<img src="img/colin.jpg" alt="Avatar">
 				</div>
-				<div class="unit-80">
+			  <div class="unit-80">
 					<h1>My passions are<br><span id="typed"></span></h1>
 				</div>
-				<p>
-					My most marketable characteristic is the ability to see things that other people don't.
-				</p>
-			</div>
+			  <p> What truly makes me stand out is seeing what others don't, whether that be process improvements, future complications with a plan, or even the dust bunny behind the TV.&nbsp;</p>
+				<p>I am passionate about learning new things and teaching others in a comprehensive way. My two characteristics I am most proud of (and am always striving to improve on) are humility and empathy. </p>
+            </div>
 		</div>
 	</div>
 
@@ -63,19 +62,20 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
+				<li>2020 - Present</li>
+				<li><a href="#">Arctic Wolf</a></li>
+				<li>Security Developer</li>
+				<li>Business Analyst</li>
+				<li>Team Captain</li>
+				<li>Security Engineer</li>
+				<li>Intern - Analyst</li>
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
+			  <li>2012 - 2019</li>
+				<li><a href="#">US Army</a></li>
+				<li>Musician</li>
+				<li>Photographer</li>
+				<li>Videographer</li>
 			</ul>
 		</div>
 	</div>
@@ -83,23 +83,35 @@
 	<!-- Award & Achievements -->
 	<div class="award section second" id="achievements">
 		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
-			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+			<h1>CERTIFICATIONS &amp;<br>Education<br></h1>
+		<ul class="award-list list-flat">
+			<li>Certifications</li>
+				<li><a href="https://www.credly.com/badges/144c9ca4-ff0e-479e-aef6-7fd2c4d344f0/public_url">GIAC Advisory Board</a></li>
+				<li><a href="https://www.credly.com/badges/d283e815-124b-4cb1-ba60-149a1a73bf05/public_url">AWS Certified Cloud Practitioner (CCP)</a></li>
+				<li><a href="https://www.credly.com/badges/d5ca28ac-7c6e-4baa-beb8-56d4ed5bd3c4/public_url">GIAC Network Forensic Analyst (GNFA)</a></li>
+				<li><a href="https://www.credly.com/badges/d283e815-124b-4cb1-ba60-149a1a73bf05/public_url">GIAC Security Essentials (GSEC)</a></li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
+			  <li>Education</li>
+				<li><b>Master's in Cyber Security</b></li>
+					<li><a href="https://www.sans.edu/cyber-security-programs/masters-degree/">SANS Technical Institute</a></li>
+					<li><i>2023-Present</i></li>
+				<br>
+				<li><b>Bachelor's in Computer Science</b></li>
+					<li>Auburn University - Summa Cum Laude</li>
+					<li><i>2019-2021</i></li>
+				<br>
+				<li><b>Bachelor's in Music Education</b></li>
+					<li>University of Nevada, Reno</li>
+					<li><i>2008-2012</i></li>
 			</ul>
+<!--
 			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+			  <li>Awards</li>
+				<li>Triage Security Engineer of the Quarter</li>
+				<li>Summa Cum Laude</li>
 			</ul>
+-->
 		</div>
 	</div>
 
@@ -108,16 +120,16 @@
 		<div class="container">
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>Personal</li>
+				<li>Attention to Detail / Mentorship</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>Development</li>
+				<li>Python (OOP) / Git / AWS / Sigma </li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>Security</li>
+				<li>Network Forensics / SOC Processes / Ethical Hacking </li>
 			</ul>
 		</div>
 	</div>
