--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
 				<li>Personal</li>
-				<li>Attention to Detail / Mentorship</li>
+				<li>Attention to Detail / Mentorship / Empathy</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Development</li>
@@ -137,7 +137,7 @@
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>Automate / Educate / Secure</h1>
 		</div>
 	</div>
 
@@ -145,7 +145,7 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+			    	<p>Colin McAllister</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
