--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				    <ul>
 				        <li class="active"><a href="#about">About</a></li>
 				        <li><a href="#experiences">Experiences</a></li>
-				        <li><a href="#achievements">Achievements</a></li>
+				        <li><a href="#education">Education</a></li>
 				        <li><a href="#skills">Skills</a></li>
 				    </ul>
 				</nav>
@@ -86,15 +86,15 @@
 			<h1>CERTIFICATIONS &amp;<br>Education<br></h1>
 		<ul class="award-list list-flat">
 			<li>Certifications</li>
-				<li><a href="https://www.credly.com/badges/144c9ca4-ff0e-479e-aef6-7fd2c4d344f0/public_url">GIAC Advisory Board</a></li>
-				<li><a href="https://www.credly.com/badges/febe16fe-eece-4852-be1d-c57db1e1087b/public_url">AWS Certified Cloud Practitioner (CCP)</a></li>
-				<li><a href="https://www.credly.com/badges/d5ca28ac-7c6e-4baa-beb8-56d4ed5bd3c4/public_url">GIAC Network Forensic Analyst (GNFA)</a></li>
-				<li><a href="https://www.credly.com/badges/d283e815-124b-4cb1-ba60-149a1a73bf05/public_url">GIAC Security Essentials (GSEC)</a></li>
+				<li><a href="https://www.credly.com/badges/144c9ca4-ff0e-479e-aef6-7fd2c4d344f0/public_url" target="_blank">GIAC Advisory Board</a></li>
+				<li><a href="https://www.credly.com/badges/febe16fe-eece-4852-be1d-c57db1e1087b/public_url" target="_blank">AWS Certified Cloud Practitioner (CCP)</a></li>
+				<li><a href="https://www.credly.com/badges/d5ca28ac-7c6e-4baa-beb8-56d4ed5bd3c4/public_url" target="_blank">GIAC Network Forensic Analyst (GNFA)</a></li>
+				<li><a href="https://www.credly.com/badges/d283e815-124b-4cb1-ba60-149a1a73bf05/public_url" target="_blank">GIAC Security Essentials (GSEC)</a></li>
 			</ul>
 			<ul class="award-list list-flat">
 			  <li>Education</li>
 				<li><b>Master's in Cyber Security</b></li>
-					<li><a href="https://www.sans.edu/cyber-security-programs/masters-degree/">SANS Technical Institute</a></li>
+					<li><a href="https://www.sans.edu/cyber-security-programs/masters-degree/" target="_blank">SANS Technical Institute</a></li>
 					<li><i>2023-Present</i></li>
 				<br>
 				<li><b>Bachelor's in Computer Science</b></li>
@@ -149,10 +149,8 @@
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/offsetcolin/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+						<li><a href="https://github.com/offsetkeyz" target="_blank"><i class="fa fa-github-square"></i></a></li>
 					</ul>
 			    </div>
 			</div>
@@ -167,7 +165,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Automation", "Cyber Security", "Python", "Music", "Photography"],
+		strings: ["Automation", "Security", "Python", "Music", "Photography"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
