--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-			/* Edit this with your name or anything else */
 			content: 'Colin';
 		}
 	</style>
@@ -51,8 +50,7 @@
 			  <div class="unit-80">
 					<h1>My passions are<br><span id="typed"></span></h1>
 				</div>
-			  <p> What truly makes me stand out is seeing what others don't, whether that be process improvements, future complications with a plan, or even the dust bunny behind the TV.&nbsp;</p>
-				<p>I am passionate about learning new things and teaching others in a comprehensive way. My two characteristics I am most proud of (and am always striving to improve on) are humility and empathy. </p>
+			  <p>I'm a motivated security practitioner and developer, specializing in SIEM/SOAR operations, Python, cybersecurity fundamentals, incident handling, and Sigma rules. I'm dedicated to solving complex security challenges and proactively strengthening systems against emerging threats. I thrive on continuous learning and adaptability in the ever-evolving cybersecurity landscape. Let's connect to collaborate and bolster digital defenses for a safer digital world.</p>
             </div>
 		</div>
 	</div>
@@ -121,15 +119,15 @@
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
 				<li>Personal</li>
-				<li>Attention to Detail / Mentorship / Empathy</li>
+				<li>Problem-Solving / Eagerness to Learn / Effective Communication</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Development</li>
-				<li>Python (OOP) / Git / AWS / Sigma </li>
+				<li>Python (OOP) / Git / AWS / Sigma Rules </li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Security</li>
-				<li>Network Forensics / SOC Processes / Ethical Hacking </li>
+				<li>Network Forensics / SIEM & SOAR / Incident Handling </li>
 			</ul>
 		</div>
 	</div>
