--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-			content: 'Colin';
+			content: "Colin";
 		}
 	</style>
 </head>
@@ -29,116 +29,59 @@
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
-				        <li class="active"><a href="#about">About</a></li>
-				        <li><a href="#experiences">Experiences</a></li>
-				        <li><a href="#education">Education</a></li>
-				        <li><a href="#skills">Skills</a></li>
+				        <li class="active"><a href="#about">About</a></li><li><a href="#experiences">Experiences</a></li><li><a href="#education">Education</a></li><li><a href="#projects">Projects</a></li>
 				    </ul>
 				</nav>
 			</header>
 		</div>
 	</div>
-
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
 			<p>Hi, I’m Colin</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/colin.jpg" alt="Avatar">
+					<img src="../img/colin.jpg" alt="Avatar">
 				</div>
 			  <div class="unit-80">
 					<h1>My passions are<br><span id="typed"></span></h1>
 				</div>
 			  <p>I'm a motivated security practitioner and developer, specializing in SIEM/SOAR operations, Python, cybersecurity fundamentals, incident handling, and Sigma rules. I'm dedicated to solving complex security challenges and proactively strengthening systems against emerging threats. I thrive on continuous learning and adaptability in the ever-evolving cybersecurity landscape. Let's connect to collaborate and bolster digital defenses for a safer digital world.</p>
-            </div>
+			</div>
 		</div>
 	</div>
-
-	<!-- Work Experience -->
-	<div class="work section second" id="experiences">
-		<div class="container">
-			<h1>Work<br>Experiences</h1>
-			<ul class="work-list">
-				<li>2020 - Present</li>
-				<li><a href="#">Arctic Wolf</a></li>
-				<li>Security Developer</li>
-				<li>Business Analyst</li>
-				<li>Team Captain</li>
-				<li>Security Engineer</li>
-				<li>Intern - Analyst</li>
-			</ul>
-			<ul class="work-list">
-			  <li>2012 - 2019</li>
-				<li><a href="#">US Army</a></li>
-				<li>Musician</li>
-				<li>Photographer</li>
-				<li>Videographer</li>
-			</ul>
-		</div>
-	</div>
-
-	<!-- Award & Achievements -->
-	<div class="award section second" id="achievements">
+	<!-- Work Experience / Volunteer --><div class="work section second" id="experiences">
+ 	<div class="container">
+		<h1>Work<br>Experiences</h1><ul class="work-list">
+			<li><a href="#">Arctic Wolf Networks</a></li><li>Security Developer</li><li>Business Analyst</li><li>Team Captain</li><li>Triage Security Engineer</li></ul></div></div>
+	<!-- Certifications --><div class="certifications section second" id="certifications">
 		<div class="container">
 			<h1>CERTIFICATIONS &amp;<br>Education<br></h1>
-		<ul class="award-list list-flat">
-			<li>Certifications</li>
-				<li><a href="https://www.credly.com/badges/144c9ca4-ff0e-479e-aef6-7fd2c4d344f0/public_url" target="_blank">GIAC Advisory Board</a></li>
-				<li><a href="https://www.credly.com/badges/febe16fe-eece-4852-be1d-c57db1e1087b/public_url" target="_blank">AWS Certified Cloud Practitioner (CCP)</a></li>
-				<li><a href="https://www.credly.com/badges/d5ca28ac-7c6e-4baa-beb8-56d4ed5bd3c4/public_url" target="_blank">GIAC Network Forensic Analyst (GNFA)</a></li>
-				<li><a href="https://www.credly.com/badges/d283e815-124b-4cb1-ba60-149a1a73bf05/public_url" target="_blank">GIAC Security Essentials (GSEC)</a></li>
-			</ul>
-			<ul class="award-list list-flat">
-			  <li>Education</li>
-				<li><b>Master's in Cyber Security</b></li>
-					<li><a href="https://www.sans.edu/cyber-security-programs/masters-degree/" target="_blank">SANS Technical Institute</a></li>
-					<li><i>2023-Present</i></li>
-				<br>
-				<li><b>Bachelor's in Computer Science</b></li>
-					<li>Auburn University - Summa Cum Laude</li>
-					<li><i>2019-2021</i></li>
-				<br>
-				<li><b>Bachelor's in Music Education</b></li>
-					<li>University of Nevada, Reno</li>
-					<li><i>2008-2012</i></li>
-			</ul>
-<!--
-			<ul class="award-list list-flat">
-			  <li>Awards</li>
-				<li>Triage Security Engineer of the Quarter</li>
-				<li>Summa Cum Laude</li>
-			</ul>
--->
-		</div>
-	</div>
-
+				<ul class="award-list list-flat"><li>Certifications</li><li><a href="https://www.credly.com/badges/144c9ca4-ff0e-479e-aef6-7fd2c4d344f0/public_url" target="_blank">GIAC Advisory Board</a> | 2023</li><li><a href="https://www.credly.com/badges/febe16fe-eece-4852-be1d-c57db1e1087b/public_url" target="_blank">AWS Certified Cloud Practitioner (CCP)</a> | 2023</li><li><a href="https://www.credly.com/badges/d5ca28ac-7c6e-4baa-beb8-56d4ed5bd3c4/public_url" target="_blank">GIAC Network Forensic Analyst (GNFA)</a> | 2022</li><li><a href="https://www.credly.com/badges/d283e815-124b-4cb1-ba60-149a1a73bf05/public_url" target="_blank">GIAC Security Essentials (GSEC)</a> | 2023</li></ul><ul class="award-list list-flat">
+<li>Education</li><li><b>Master's in Cyber Security</b></li><li><a href=https://www.sans.edu/cyber-security-programs/masters-degree/ target="_blank">Sans Technical Institute</a></li><li>GPA: 4.0</li><li><i>2023-07-01 - Present</i></li><br><li><b>Bachelor's in Computer Science</b></li><li><b>Auburn University</b></li><li>Summa Cum Laude</li><li><i>2020-01-01 - 2021-11-01</i></li><br><li><b>Bachelor's in Music Education</b></li><li><b>University of Nevada Reno</b></li><li>Dean'S List</li><li><i>2008-01-01 - 2012-01-01</i></li></ul><ul class="award-list list-flat"><li>Awards</li><li><b>Hackathon Winner</b> | Arctic Wolf Networks | <i>2023-11-01</i></li><li><b>Triage Security Engineer 1 of the Quarter</b> | Arctic Wolf Networks | <i>2021-07-01</i></li><li><b>Commandant's List</b> | Leadership Academy - Us Army | <i>2015-01-01</i></li></ul></div></div>
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>Technical<br>Skills</h1>
-			<ul class="skill-list list-flat">
-				<li>Personal</li>
-				<li>Problem-Solving / Eagerness to Learn / Effective Communication</li>
-			</ul>
-			<ul class="skill-list list-flat">
-				<li>Development</li>
-				<li>Python (OOP) / Git / AWS / Sigma Rules </li>
-			</ul>
-			<ul class="skill-list list-flat">
-				<li>Security</li>
-				<li>Network Forensics / SIEM & SOAR / Incident Handling </li>
-			</ul>
-		</div>
-	</div>
-
+  			<h1>Technical<br>Skills</h1><ul class="skill-list list-flat">
+<li>Cyber Security</li>
+<li>SIEM/SOAR / Incident Handling / Threat Hunting</li>
+</ul>
+<ul class="skill-list list-flat">
+<li>Development</li>
+<li>Python / Object Oriented Programming / Git / AWS</li>
+</ul>
+<ul class="skill-list list-flat">
+<li>Soft Skills</li>
+<li>Communication / Empathy / Leadership</li>
+</ul>
+<ul class="skill-list list-flat">
+<li><code>Excel</code><code>AI Prompt Generation</code><code>Linux</code></li></ul></div></div>
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
 			<h1>Automate / Educate / Secure</h1>
 		</div>
 	</div>
-
 	<footer>
 		<div class="container">
 			<div class="units-row">
@@ -146,15 +89,11 @@
 			    	<p>Colin McAllister</p>
 			    </div>
 			    <div class="unit-50">
-					<ul class="social list-flat right">
-						<li><a href="https://www.linkedin.com/in/offsetcolin/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-						<li><a href="https://github.com/offsetkeyz" target="_blank"><i class="fa fa-github-square"></i></a></li>
-					</ul>
+					<ul class="social list-flat right"><li><a href="https://github.com/offsetkeyz" target="_blank"><i class="fa fa-github-square"></i></a></li><li><a href="https://www.linkedin.com/in/offsetcolin/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li></ul>
 			    </div>
 			</div>
 		</div>
 	</footer>
-
 	<!-- Javascript -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/typed.min.js"></script>
@@ -163,9 +102,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Automation", "Security", "Python", "Music", "Photography"],
-
-		typeSpeed:89,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
-    </script>
+		strings: ["Automation","Security","Education","Photography","Music",],typeSpeed:89,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
+    </script>    
 </body>
 </html>
