Se agrega sección de estudios

--- a/index.html
+++ b/index.html
@@ -61,6 +61,23 @@
 	<!-- Work Experience -->
 	<div class="work section second" id="experiences">
 		<div class="container">
+			<h1>Estudios</h1>
+			<ul class="work-list">
+				<li>2010-2014</li>
+				<li><a href="#">Universidad Autónoma de Chihuahua</a></li>
+				<li>Ingenería de Software</li>
+			</ul>
+			<ul class="work-list">
+				<li>2014-2016</li>
+				<li><a href="#">Universidad Autónoma de Chihuahua</a></li>
+				<li>Maestría en Ingeniería en Computación</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- Work Experience -->
+	<div class="work section second" id="experiences">
+		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
 				<li>2014-2015</li>
