Se agrego seccion estudios

--- a/index.html
+++ b/index.html
@@ -61,6 +61,28 @@
 	<!-- Work Experience -->
 	<div class="work section second" id="experiences">
 		<div class="container">
+			<h1>Seccion<br>Estudios</h1>
+			<ul class="work-list">
+				<li>2009-2015</li>
+				<li><a href="#">Primaria Luis Urias Belderráin</a></li>
+				<li>6 años, certificado</li>
+			</ul>
+			<ul class="work-list">
+				<li>2015-2018</li>
+				<li><a href="#">Escuela Secundaria Estatal Número 3015</a></li>
+				<li>3 años, certificado. Dibujo Técnico</li>
+			</ul>
+			<ul class="work-list">
+				<li>2018-2021</li>
+				<li><a href="#">COBACH Plantel 8</a></li>
+				<li>3 años, certificado. Tecnologías de la Información, Físico Matemático.</li>
+			</ul>
+		</div>
+	</div>
+	
+	<!-- Work Experience -->
+	<div class="work section second" id="experiences">
+		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
 				<li>2014-2015</li>
@@ -80,6 +102,7 @@
 		</div>
 	</div>
 
+	
 	<!-- Award & Achievements -->
 	<div class="award section second" id="achievements">
 		<div class="container">
