Se agrea sección de estudios

--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
 			</div>
 		</div>
 	</div>
+	<!-- Work Experience -->
+	<div class="work section second" id="experiences">
+		<div class="container">
+			<h1>Estudios</h1>
+			<ul class="work-list">
+				<li>2021-2025</li>
+				<li><a href="#">ULSA Chihuahua</a></li>
+				<li>Ingenieria en Tecnologias de la Informacion y Telecomunicaciones</li>
+			</ul>
+			<ul class="work-list">
+				<li>2018-2021</li>
+				<li><a href="#">ITESM Chihuahua</a></li>
+				<li>Prepratoria Programa Bilingue</li>
+			</ul>
+			<ul class="work-list">
+				<li>2015-2018</li>
+				<li><a href="#">ITESM Chihuahua</a></li>
+				<li>Secundaria Programa Bilingue</li>
+			</ul>
+		</div>
+	</div>
 
 	<!-- Work Experience -->
 	<div class="work section second" id="experiences">
