Se agrega seccion de hobbies

--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
+				<li>2015-2019</li>
+				<li><a href="#">Preparatoria La Salle de Chihuahua</a></li>
+				<li>Preparatoria fisico matematica</li>
+			</ul>
+			<ul class="work-list">
+				<li>2019-2020</li>
+				<li><a href="#">Voluntariado El Salto</a></li>
+				<li>Misionero</li>
+			</ul>
+			<ul class="work-list">
+				<li>2021-223</li>
+				<li><a href="#">Universidad La Salle Chihuahua</a></li>
+				<li>Programacion</li>
+			</ul>
+		</div>
+	</div>
+	
+	<!-- Work Experience -->
+	<div class="work section second" id="experiences">
+		<div class="container">
+			<h1>Work<br>Experiences</h1>
+			<ul class="work-list">
 				<li>2014-2015</li>
 				<li><a href="#">PT Traveloka Indonesia</a></li>
 				<li>Web Designer</li>
